--- a/source/2021/01/18/nathan-evans-wellerman-family-tree-shantytok-mashupsupercut.toml
+++ b/source/2021/01/18/nathan-evans-wellerman-family-tree-shantytok-mashupsupercut.toml
@@ -12,3 +12,29 @@ likes = "59093"
 dislikes = "868"
 comments = "1573"
 tag = [ "shantytok", "mashup", "wellerman", "supercut",]
+video_title = "Nathan Evans Wellerman Family Tree — shantytok mashup/supercut"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/TjVDmMI4sbk/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/TjVDmMI4sbk/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/TjVDmMI4sbk/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/TjVDmMI4sbk/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/TjVDmMI4sbk/maxresdefault.jpg"
+width = 1280
+height = 720
