--- a/source/2021/05/21/assassins-creed-ii-chapter-8-venezia.toml
+++ b/source/2021/05/21/assassins-creed-ii-chapter-8-venezia.toml
@@ -6,10 +6,35 @@ origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
 description = "In Chapter 8, Ezio travels to Venice.\n\n0:00 Opening titles\n0:22 exploring Forlì\n8:05 Tutti A Bordo\n12:22 skill retention\n25:45 dream: Altaïr and Maria\n31:43 Benvenuto\n39:30 That's Gonna Leave A Mark\n52:10 Building Blocks\n53:50 database entries\n1:03:25 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n"
-thumbnail = "https://i.ytimg.com/vi/7andCXrI_y8/maxresdefault.jpg"
 views = "4"
 likes = "0"
 dislikes = "0"
 comments = "0"
 tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
 theme = "game-shows"
+video_title = "Assassin's Creed II — Chapter 8 — Venezia"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/7andCXrI_y8/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/7andCXrI_y8/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/7andCXrI_y8/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/7andCXrI_y8/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/7andCXrI_y8/maxresdefault.jpg"
+width = 1280
+height = 720
