--- a/source/2010/07/18/devfort-cohort-4-third-day-of-coding.toml
+++ b/source/2010/07/18/devfort-cohort-4-third-day-of-coding.toml
@@ -10,5 +10,25 @@ views = "106"
 likes = "0"
 dislikes = "1"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/zw5l3iVltwE/default.jpg"
 tag = [ "devfort", "devfort-4",]
+video_title = "/dev/fort: cohort 4, third day of coding"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/zw5l3iVltwE/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/zw5l3iVltwE/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/zw5l3iVltwE/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/zw5l3iVltwE/sddefault.jpg"
+width = 640
+height = 480
