--- a/source/2020/09/24/horizon-zero-dawn-chapter-1-aloy.toml
+++ b/source/2020/09/24/horizon-zero-dawn-chapter-1-aloy.toml
@@ -10,6 +10,31 @@ views = "7615"
 likes = "48"
 dislikes = "3"
 comments = "5"
-thumbnail = "https://i.ytimg.com/vi/KW9a_XOhBRs/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 1 — Aloy"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/KW9a_XOhBRs/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/KW9a_XOhBRs/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/KW9a_XOhBRs/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/KW9a_XOhBRs/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/KW9a_XOhBRs/maxresdefault.jpg"
+width = 1280
+height = 720
