--- a/source/2020/09/24/horizon-zero-dawn-chapter-2-the-lesson.toml
+++ b/source/2020/09/24/horizon-zero-dawn-chapter-2-the-lesson.toml
@@ -10,6 +10,31 @@ views = "140"
 likes = "2"
 dislikes = "1"
 comments = "1"
-thumbnail = "https://i.ytimg.com/vi/QvB2OJYf448/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 2 — The Lesson"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/QvB2OJYf448/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/QvB2OJYf448/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/QvB2OJYf448/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/QvB2OJYf448/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/QvB2OJYf448/maxresdefault.jpg"
+width = 1280
+height = 720
