--- a/source/2020/09/28/horizon-zero-dawn-chapter-3-the-embrace.toml
+++ b/source/2020/09/28/horizon-zero-dawn-chapter-3-the-embrace.toml
@@ -10,6 +10,31 @@ views = "57"
 likes = "2"
 dislikes = "0"
 comments = "1"
-thumbnail = "https://i.ytimg.com/vi/fwY8UWzm4ug/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 3 — The Embrace"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/fwY8UWzm4ug/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/fwY8UWzm4ug/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/fwY8UWzm4ug/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/fwY8UWzm4ug/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/fwY8UWzm4ug/maxresdefault.jpg"
+width = 1280
+height = 720
