--- a/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
+++ b/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
@@ -10,6 +10,31 @@ views = "53"
 likes = "5"
 dislikes = "0"
 comments = "1"
-thumbnail = "https://i.ytimg.com/vi/NrRYFFW2obY/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 4 — The Proving"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/NrRYFFW2obY/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/NrRYFFW2obY/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/NrRYFFW2obY/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/NrRYFFW2obY/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/NrRYFFW2obY/maxresdefault.jpg"
+width = 1280
+height = 720
