--- a/source/2020/10/05/horizon-zero-dawn-chapter-5-corruption.toml
+++ b/source/2020/10/05/horizon-zero-dawn-chapter-5-corruption.toml
@@ -10,6 +10,31 @@ views = "50"
 likes = "4"
 dislikes = "0"
 comments = "2"
-thumbnail = "https://i.ytimg.com/vi/4cuE6pNeqNs/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 5 — Corruption"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/4cuE6pNeqNs/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/4cuE6pNeqNs/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/4cuE6pNeqNs/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/4cuE6pNeqNs/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/4cuE6pNeqNs/maxresdefault.jpg"
+width = 1280
+height = 720
