--- a/source/2020/10/09/horizon-zero-dawn-chapter-6-the-war-party.toml
+++ b/source/2020/10/09/horizon-zero-dawn-chapter-6-the-war-party.toml
@@ -10,6 +10,31 @@ views = "51"
 likes = "4"
 dislikes = "0"
 comments = "1"
-thumbnail = "https://i.ytimg.com/vi/S-sszZssMQw/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 6 — The War Party"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/S-sszZssMQw/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/S-sszZssMQw/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/S-sszZssMQw/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/S-sszZssMQw/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/S-sszZssMQw/maxresdefault.jpg"
+width = 1280
+height = 720
