--- a/source/2020/10/12/horizon-zero-dawn-chapter-7-outcasts.toml
+++ b/source/2020/10/12/horizon-zero-dawn-chapter-7-outcasts.toml
@@ -10,6 +10,31 @@ views = "35"
 likes = "3"
 dislikes = "0"
 comments = "1"
-thumbnail = "https://i.ytimg.com/vi/mUbfI71cQZ0/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 7 — Outcasts"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/mUbfI71cQZ0/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/mUbfI71cQZ0/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/mUbfI71cQZ0/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/mUbfI71cQZ0/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/mUbfI71cQZ0/maxresdefault.jpg"
+width = 1280
+height = 720
