--- a/source/2020/10/16/horizon-zero-dawn-chapter-8-the-ring-of-metal.toml
+++ b/source/2020/10/16/horizon-zero-dawn-chapter-8-the-ring-of-metal.toml
@@ -10,6 +10,31 @@ views = "29"
 likes = "3"
 dislikes = "0"
 comments = "1"
-thumbnail = "https://i.ytimg.com/vi/H3rZthNNo8g/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 8 — The Ring of Metal"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/H3rZthNNo8g/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/H3rZthNNo8g/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/H3rZthNNo8g/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/H3rZthNNo8g/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/H3rZthNNo8g/maxresdefault.jpg"
+width = 1280
+height = 720
