--- a/source/2020/10/19/horizon-zero-dawn-chapter-9-sigma.toml
+++ b/source/2020/10/19/horizon-zero-dawn-chapter-9-sigma.toml
@@ -10,6 +10,31 @@ views = "34"
 likes = "4"
 dislikes = "0"
 comments = "1"
-thumbnail = "https://i.ytimg.com/vi/qFcDSH8rXWs/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 9 — Sigma"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/qFcDSH8rXWs/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/qFcDSH8rXWs/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/qFcDSH8rXWs/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/qFcDSH8rXWs/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/qFcDSH8rXWs/maxresdefault.jpg"
+width = 1280
+height = 720
