--- a/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
+++ b/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
@@ -10,6 +10,31 @@ views = "30"
 likes = "3"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/7Sr4wgFOAEM/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 10 — Heading West"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/maxresdefault.jpg"
+width = 1280
+height = 720
