--- a/source/2020/11/06/horizon-zero-dawn-chapter-14-hunting.toml
+++ b/source/2020/11/06/horizon-zero-dawn-chapter-14-hunting.toml
@@ -10,6 +10,31 @@ views = "16"
 likes = "1"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/JznC6TII07c/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 14 — Hunting"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/JznC6TII07c/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/JznC6TII07c/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/JznC6TII07c/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/JznC6TII07c/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/JznC6TII07c/maxresdefault.jpg"
+width = 1280
+height = 720
