--- a/source/2020/11/20/horizon-zero-dawn-chapter-18-rho.toml
+++ b/source/2020/11/20/horizon-zero-dawn-chapter-18-rho.toml
@@ -10,6 +10,31 @@ views = "7"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/MVhx1qfJPvQ/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 18 — Rho"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/MVhx1qfJPvQ/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/MVhx1qfJPvQ/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/MVhx1qfJPvQ/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/MVhx1qfJPvQ/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/MVhx1qfJPvQ/maxresdefault.jpg"
+width = 1280
+height = 720
