--- a/source/2020/11/27/horizon-zero-dawn-chapter-20-blood.toml
+++ b/source/2020/11/27/horizon-zero-dawn-chapter-20-blood.toml
@@ -10,6 +10,31 @@ views = "16"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/tACqg9R53A0/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 20 — Blood"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/tACqg9R53A0/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/tACqg9R53A0/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/tACqg9R53A0/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/tACqg9R53A0/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/tACqg9R53A0/maxresdefault.jpg"
+width = 1280
+height = 720
