--- a/source/2020/11/30/horizon-zero-dawn-chapter-21-ersa.toml
+++ b/source/2020/11/30/horizon-zero-dawn-chapter-21-ersa.toml
@@ -10,6 +10,31 @@ views = "16"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/JhgbOyelU2M/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 21 — Ersa"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/JhgbOyelU2M/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/JhgbOyelU2M/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/JhgbOyelU2M/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/JhgbOyelU2M/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/JhgbOyelU2M/maxresdefault.jpg"
+width = 1280
+height = 720
