--- a/source/2020/12/04/horizon-zero-dawn-chapter-22-dervahl.toml
+++ b/source/2020/12/04/horizon-zero-dawn-chapter-22-dervahl.toml
@@ -10,6 +10,31 @@ views = "11"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/ndeLUKqYKNw/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 22 — Dervahl"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/ndeLUKqYKNw/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/ndeLUKqYKNw/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/ndeLUKqYKNw/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/ndeLUKqYKNw/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/ndeLUKqYKNw/maxresdefault.jpg"
+width = 1280
+height = 720
