--- a/source/2020/12/14/horizon-zero-dawn-chapter-25-divided.toml
+++ b/source/2020/12/14/horizon-zero-dawn-chapter-25-divided.toml
@@ -10,6 +10,31 @@ views = "5"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/dMG0bKHFez8/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 25 — Divided"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/dMG0bKHFez8/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/dMG0bKHFez8/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/dMG0bKHFez8/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/dMG0bKHFez8/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/dMG0bKHFez8/maxresdefault.jpg"
+width = 1280
+height = 720
