--- a/source/2020/12/21/horizon-zero-dawn-chapter-27-xi.toml
+++ b/source/2020/12/21/horizon-zero-dawn-chapter-27-xi.toml
@@ -10,6 +10,31 @@ views = "8"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/fUXBS-aVJ0A/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 27 — Xi"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/fUXBS-aVJ0A/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/fUXBS-aVJ0A/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/fUXBS-aVJ0A/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/fUXBS-aVJ0A/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/fUXBS-aVJ0A/maxresdefault.jpg"
+width = 1280
+height = 720
