--- a/source/2020/12/28/horizon-zero-dawn-chapter-28-shattered-kiln.toml
+++ b/source/2020/12/28/horizon-zero-dawn-chapter-28-shattered-kiln.toml
@@ -10,6 +10,31 @@ views = "9"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/Vbro-ubpYes/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 28 — Shattered Kiln"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/Vbro-ubpYes/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/Vbro-ubpYes/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/Vbro-ubpYes/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/Vbro-ubpYes/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/Vbro-ubpYes/maxresdefault.jpg"
+width = 1280
+height = 720
