--- a/source/2021/01/04/horizon-zero-dawn-chapter-30-glitch.toml
+++ b/source/2021/01/04/horizon-zero-dawn-chapter-30-glitch.toml
@@ -10,6 +10,31 @@ views = "17"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/uICcLf1tNcw/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 30 — Glitch"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/uICcLf1tNcw/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/uICcLf1tNcw/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/uICcLf1tNcw/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/uICcLf1tNcw/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/uICcLf1tNcw/maxresdefault.jpg"
+width = 1280
+height = 720
