--- a/source/2021/01/15/horizon-zero-dawn-chapter-33-grave-hoard.toml
+++ b/source/2021/01/15/horizon-zero-dawn-chapter-33-grave-hoard.toml
@@ -10,6 +10,31 @@ views = "28"
 likes = "1"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/3u2gsqa1W8E/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 33 — Grave-Hoard"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/3u2gsqa1W8E/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/3u2gsqa1W8E/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/3u2gsqa1W8E/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/3u2gsqa1W8E/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/3u2gsqa1W8E/maxresdefault.jpg"
+width = 1280
+height = 720
