--- a/source/2021/01/18/horizon-zero-dawn-chapter-34-the-cut.toml
+++ b/source/2021/01/18/horizon-zero-dawn-chapter-34-the-cut.toml
@@ -10,6 +10,31 @@ views = "10"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/hvDY-HKgFVQ/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 34 — The Cut"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/maxresdefault.jpg"
+width = 1280
+height = 720
