--- a/source/2021/01/22/horizon-zero-dawn-chapter-35-deep-din.toml
+++ b/source/2021/01/22/horizon-zero-dawn-chapter-35-deep-din.toml
@@ -10,6 +10,31 @@ description = "In Chapter 35, Aloy finds the source of the floodwaters affecting
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/rsWc2w7Dd6s/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 35 — Deep Din"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/rsWc2w7Dd6s/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/rsWc2w7Dd6s/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/rsWc2w7Dd6s/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/rsWc2w7Dd6s/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/rsWc2w7Dd6s/maxresdefault.jpg"
+width = 1280
+height = 720
