--- a/source/2021/01/25/horizon-zero-dawn-chapter-36-shamans-path.toml
+++ b/source/2021/01/25/horizon-zero-dawn-chapter-36-shamans-path.toml
@@ -10,6 +10,31 @@ views = "11"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/65wXFIU2nko/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 36 — Shaman's Path"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/65wXFIU2nko/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/65wXFIU2nko/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/65wXFIU2nko/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/65wXFIU2nko/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/65wXFIU2nko/maxresdefault.jpg"
+width = 1280
+height = 720
