--- a/source/2021/01/29/horizon-zero-dawn-chapter-37-the-spirit.toml
+++ b/source/2021/01/29/horizon-zero-dawn-chapter-37-the-spirit.toml
@@ -10,6 +10,31 @@ views = "17"
 likes = "1"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/dA2KpDzKDVs/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 37 — The Spirit"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/dA2KpDzKDVs/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/dA2KpDzKDVs/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/dA2KpDzKDVs/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/dA2KpDzKDVs/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/dA2KpDzKDVs/maxresdefault.jpg"
+width = 1280
+height = 720
