--- a/source/2021/02/12/horizon-zero-dawn-chapter-41-epsilon.toml
+++ b/source/2021/02/12/horizon-zero-dawn-chapter-41-epsilon.toml
@@ -10,6 +10,31 @@ views = "21"
 likes = "1"
 dislikes = "1"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/chnnTYEfGiA/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 41 — Epsilon"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/chnnTYEfGiA/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/chnnTYEfGiA/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/chnnTYEfGiA/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/chnnTYEfGiA/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/chnnTYEfGiA/maxresdefault.jpg"
+width = 1280
+height = 720
