--- a/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
+++ b/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
@@ -10,6 +10,31 @@ views = "19"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/9mBRiqSf53M/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 42 — CYAN"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/9mBRiqSf53M/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/9mBRiqSf53M/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/9mBRiqSf53M/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/9mBRiqSf53M/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/9mBRiqSf53M/maxresdefault.jpg"
+width = 1280
+height = 720
