--- a/source/2021/02/19/horizon-zero-dawn-chapter-43-a-sorry-mess.toml
+++ b/source/2021/02/19/horizon-zero-dawn-chapter-43-a-sorry-mess.toml
@@ -10,6 +10,31 @@ views = "17"
 likes = "1"
 dislikes = "0"
 comments = "1"
-thumbnail = "https://i.ytimg.com/vi/Qy28ySFDnNI/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 43 — A Sorry Mess"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/Qy28ySFDnNI/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/Qy28ySFDnNI/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/Qy28ySFDnNI/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/Qy28ySFDnNI/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/Qy28ySFDnNI/maxresdefault.jpg"
+width = 1280
+height = 720
