--- a/source/2021/02/22/horizon-zero-dawn-chapter-44-stormbird.toml
+++ b/source/2021/02/22/horizon-zero-dawn-chapter-44-stormbird.toml
@@ -10,6 +10,31 @@ views = "20"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/T0HjEBP1XI0/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 44 — Stormbird"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/T0HjEBP1XI0/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/T0HjEBP1XI0/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/T0HjEBP1XI0/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/T0HjEBP1XI0/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/T0HjEBP1XI0/maxresdefault.jpg"
+width = 1280
+height = 720
