--- a/source/2021/02/26/horizon-zero-dawn-chapter-45-free-heap.toml
+++ b/source/2021/02/26/horizon-zero-dawn-chapter-45-free-heap.toml
@@ -10,6 +10,31 @@ views = "15"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/CLKno6rULwg/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 45 — Free Heap"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/CLKno6rULwg/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/CLKno6rULwg/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/CLKno6rULwg/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/CLKno6rULwg/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/CLKno6rULwg/maxresdefault.jpg"
+width = 1280
+height = 720
