--- a/source/2021/03/01/horizon-zero-dawn-chapter-46-hunting-grounds.toml
+++ b/source/2021/03/01/horizon-zero-dawn-chapter-46-hunting-grounds.toml
@@ -10,6 +10,31 @@ views = "24"
 likes = "0"
 dislikes = "0"
 comments = "0"
-thumbnail = "https://i.ytimg.com/vi/x0YvJZFwZhc/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 46 — Hunting Grounds"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/x0YvJZFwZhc/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/x0YvJZFwZhc/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/x0YvJZFwZhc/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/x0YvJZFwZhc/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/x0YvJZFwZhc/maxresdefault.jpg"
+width = 1280
+height = 720
