--- a/source/2021/03/05/horizon-zero-dawn-chapter-47-redmaw.toml
+++ b/source/2021/03/05/horizon-zero-dawn-chapter-47-redmaw.toml
@@ -1,5 +1,4 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 47 — Redmaw”"
-thumbnail = "https://i.ytimg.com/vi/sUNE52OKP-A/maxresdefault.jpg"
 published = 2021-03-05T08:15:04Z
 video_id = "sUNE52OKP-A"
 origin = "youtube-gs"
@@ -13,3 +12,29 @@ dislikes = "0"
 comments = "0"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 47 — Redmaw"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/sUNE52OKP-A/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/sUNE52OKP-A/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/sUNE52OKP-A/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/sUNE52OKP-A/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/sUNE52OKP-A/maxresdefault.jpg"
+width = 1280
+height = 720
