--- a/source/2021/03/12/horizon-zero-dawn-chapter-49-sunfall.toml
+++ b/source/2021/03/12/horizon-zero-dawn-chapter-49-sunfall.toml
@@ -1,5 +1,4 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 49 — Sunfall”"
-thumbnail = "https://i.ytimg.com/vi/PDOL93UAqj8/maxresdefault.jpg"
 published = 2021-03-12T08:15:00Z
 video_id = "PDOL93UAqj8"
 origin = "youtube-gs"
@@ -13,3 +12,29 @@ dislikes = "0"
 comments = "0"
 tag = [ "horizon-zero-dawn", "game-shows",]
 theme = "game-shows"
+video_title = "Horizon Zero Dawn — Chapter 49 — Sunfall"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/PDOL93UAqj8/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/PDOL93UAqj8/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/PDOL93UAqj8/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/PDOL93UAqj8/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/PDOL93UAqj8/maxresdefault.jpg"
+width = 1280
+height = 720
