--- a/source/2021/04/08/behind-the-scenes-horizon-zero-dawn-edits-in-the-sun-ring.toml
+++ b/source/2021/04/08/behind-the-scenes-horizon-zero-dawn-edits-in-the-sun-ring.toml
@@ -6,10 +6,35 @@ origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
 description = "In Chapter 54 of my Horizon Zero Dawn playthrough, I make some changes to cinematic sequences. Find the chapter at https://www.youtube.com/watch?v=xF2poDHo0hA\u200b\n\nIn this video I explain how and why I have made the changes.\n\n"
-thumbnail = "https://i.ytimg.com/vi/t65w8tDQn-g/maxresdefault.jpg"
 views = "23"
 likes = "1"
 dislikes = "0"
 comments = "0"
 tag = [ "horizon-zero-dawn", "behind-the-scenes", "game-shows",]
 theme = "game-shows"
+video_title = "Behind the Scenes — Horizon Zero Dawn — Edits in the Sun Ring"
+
+[thumbnails.default]
+url = "https://i.ytimg.com/vi/t65w8tDQn-g/default.jpg"
+width = 120
+height = 90
+
+[thumbnails.medium]
+url = "https://i.ytimg.com/vi/t65w8tDQn-g/mqdefault.jpg"
+width = 320
+height = 180
+
+[thumbnails.high]
+url = "https://i.ytimg.com/vi/t65w8tDQn-g/hqdefault.jpg"
+width = 480
+height = 360
+
+[thumbnails.standard]
+url = "https://i.ytimg.com/vi/t65w8tDQn-g/sddefault.jpg"
+width = 640
+height = 480
+
+[thumbnails.maxres]
+url = "https://i.ytimg.com/vi/t65w8tDQn-g/maxresdefault.jpg"
+width = 1280
+height = 720
